[gd_scene load_steps=2 format=3 uid="uid://bmtctt3e5e8ym"]

[ext_resource type="Script" path="res://Scripts/start_menu.gd" id="1_pmn7x"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmn7x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -181.0
offset_right = 120.0
offset_bottom = -80.0
grow_vertical = 0
scale = Vector2(1.6, 1.6)

[node name="new_game_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit_button")
text = "Новая игра"

[node name="settings_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Настройки"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../new_game_button")
text = "Выйти"

[connection signal="pressed" from="VBoxContainer/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
